After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 774612 - clutter_gst_video_sink_get_pipeline() fails to return the pipeline
clutter_gst_video_sink_get_pipeline() fails to return the pipeline
Status: RESOLVED FIXED
Product: clutter-gst
Classification: Other
Component: general
3.0.x
Other Linux
: Normal normal
: ---
Assigned To: clutter-gst-maint
clutter-gst-maint
Depends on:
Blocks:
 
 
Reported: 2016-11-17 10:59 UTC by Fabrice Bellet
Modified: 2016-11-17 11:15 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
video-sink: really returns the sink pipeline (790 bytes, patch)
2016-11-17 10:59 UTC, Fabrice Bellet
committed Details | Review

Description Fabrice Bellet 2016-11-17 10:59:33 UTC
Created attachment 340126 [details] [review]
video-sink: really returns the sink pipeline

Hi!

I think the priv local variable of this function needs to be set somewhere.
Comment 1 Lionel Landwerlin 2016-11-17 11:11:33 UTC
Review of attachment 340126 [details] [review]:

Thanks a lot for spotting this.
Comment 2 Lionel Landwerlin 2016-11-17 11:15:14 UTC
Review of attachment 340126 [details] [review]:

Pushed to the 3.0 branch.