video-sink: really returns the sink pipeline

https://bugzilla.gnome.org/show_bug.cgi?id=774612